--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
