--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "~16.2.10",
     "@angular/compiler-cli": "^16.2.12",
     "@types/jasmine": "~4.3.0",
+    "@types/quill": "^2.0.14",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
